--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -7,24 +7,18 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch: {}
-
-permissions:
-  contents: read
 
 jobs:
   lint:
-    name: Linter
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version-file: "go.mod"
-          check-latest: true
-
-      - name: Run linters
-        run: task lint
+          go-version-file: 'go.mod'
+          cache: false
+      - name: Golangci-lint
+        uses: golangci/golangci-lint-action@v6.0.1    
+        with:
+          args: --timeout 3m
