build: add multi-stage-build, update docker-compose.yml & makefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,4 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+      - ./app/logs:/var/log/app
